# midas-journal-776

Source/: CMakeLists.txt  license.txt
Source/examples/: 2D3DRegistration2.cxx  CMakeLists.txt  GenerateProjection.cxx  IntensityBased2D3DRegistration2.cxx  oraMultiResolutionImage2D3DRegistrationMethodCommandWithSRC.h  oraMultiResolutionImage2D3DRegistrationMethodCommandWithSRC.txx  oraMultiResolutionImage2D3DRegistrationMethodWithSRC.h  oraMultiResolutionImage2D3DRegistrationMethodWithSRC.txx  oraMultiResolutionRegistrationCommandWithSRC.h  oraMultiResolutionRegistrationCommandWithSRC.txx  oraOptimizerIterationCommandWithSRC.h  oraOptimizerIterationCommandWithSRC.txx
Source/examples/fwex/: 2D3DRegistration.cxx  CMakeLists.txt  LICENSE.txt
Source/examples/fwex/2D3DRegistrationFramework/: CMakeLists.txt  itkExhaustiveOptimizerComplete.hxx  itkMultiResolutionImage2D3DRegistrationMethod.h  itkMultiResolutionImage2D3DRegistrationMethod.txx  itkMultiResolutionImage2D3DRegistrationMethodCommand.h  itkMultiResolutionImage2D3DRegistrationMethodCommand.txx  itkMultiResolutionRegistrationCommand.h  itkMultiResolutionRegistrationCommand.txx  itkOptimizerIterationCommand.h  itkOptimizerIterationCommand.txx
Source/examples/fwex/2D3DRegistrationFrameworkExtended/: CMakeLists.txt  itkMattesMutualInformationImageToImageMetricComplete.h  itkMattesMutualInformationImageToImageMetricComplete.txx  itkMultiResolutionImage2D3DRegistrationMethodCustom.h  itkMultiResolutionImage2D3DRegistrationMethodCustom.txx  itkMultiResolutionRegistrationCommandCustom.h  itkMultiResolutionRegistrationCommandCustom.txx
Source/examples/fwex/DRR/: CMakeLists.txt  itkPerspectiveProjectionImageFilter.h  itkPerspectiveProjectionImageFilter.txx  itkPerspectiveProjectionInterpolateImageFunction.h  itkPerspectiveProjectionInterpolateImageFunction.txx  itkRayCastPerspectiveProjectionImageFilter.h  itkRayCastPerspectiveProjectionImageFilter.txx  itkSplatPerspectiveProjectionImageFilter.h  itkSplatPerspectiveProjectionImageFilter.txx  itkUpdateCommand.h
Source/metric/: CMakeLists.txt  oraAverageRanksImageToImageFilter.h  oraAverageRanksImageToImageFilter.txx  oraStochasticRankCorrelationImageToImageMetric.h  oraStochasticRankCorrelationImageToImageMetric.txx
Source/metric/testing/: CMakeLists.txt  TestAverageRanksFilter.cxx  TestStochasticRankCorrelationMetric.cxx
